--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+data/
+model/
+runs/
+logs/
+out/
+db/
+looptemp/
+temp.ipynb
+temp.py
+*.sh
+*.json
+*.csv
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
